[package]
name = "fuzzh3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
quiche = "0.24.7"
rand = "0.9.2"
log = "0.4.29"
env_logger = "0.11.8"
url = "2.5.8"
mio = { version = "1.1.1", features = ["os-poll", "net"] }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18.3"
thiserror = "2.0.17"
